<resources>
    <string name="app_name">TamalesHR</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="auth">Authentication</string>
    <string name="menu_home">Home</string>
    <string name="menu_profile">Profile</string>
    <string name="menu_salary">Salary</string>

    <string name="home_title">Welcome</string>
    <string name="home_subtitle">Let\'s manage your data</string>
    <string name="full_name_placeholder">%1$s %2$s</string>
    <string name="home_emp_no">Emp No: %1$s</string>
    <string name="home_emp_welcome">Welcome %1$s!</string>

    <string name="salary_description">Manage your personal information</string>

    <string name="profile_description">See your salary information</string>
    <string name="btn_login">Login</string>
    <string name="invalid_credentials">Invalid Credentials</string>
    <string name="hiredate">Hiredate</string>
    <string name="titles_latest_to_oldest">Titles (Latest to Oldest)</string>
    <string name="departments_latest_to_oldest">Departments (Latest to Oldest)</string>
    <string name="birthdate">Birthdate</string>
    <string name="full_name">Full Name</string>
    <string name="employee_number">Employee Number</string>
    <string name="payment_history">Payment History</string>
    <string name="manage_department">Manage</string>
    <string name="manage">Manage</string>
    <string name="department">Department</string>
    <string name="manager_the_resources_in_your_department">Manager the resources in your department</string>
    <string name="logout">Logout</string>
    <string name="add_employee">Add Employee</string>
    <string name="remove_employee">Remove Employee</string>
    <string name="search_for_an_employee">Search by employee number</string>
    <string name="enter_employee_no">Enter Employee No</string>
    <string name="add">Add</string>
    <string name="invalid_employee_number">Invalid Employee Number</string>
    <string name="cancel">Cancel</string>
    <string name="add_employee_title">Add Employee</string>
    <string name="remove_employee_title">Remove Employee</string>
    <string name="are_you_sure_you_want_to_remove">Are you sure you want to remove employee %1$s?</string>
    <string name="remove">Remove</string>
    <string name="cancel_remove">Cancel</string>
    <string name="no_users_found">No users found</string>
    <string name="user_was_removed_successfully">User was removed successfully</string>
    <string name="user_was_added_successfully">User was added successfully</string>
</resources>