<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.example.tamaleshr.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/nav_profile"
        android:name="com.example.tamaleshr.ui.profile.ProfileFragment"
        android:label="@string/menu_profile"
        tools:layout="@layout/fragment_profile" >
        <action
            android:id="@+id/action_nav_profile_to_nav_salary"
            app:destination="@id/nav_salary"
            app:popUpToInclusive="true" />
    </fragment>

    <fragment
        android:id="@+id/nav_salary"
        android:name="com.example.tamaleshr.ui.salary.SalaryFragment"
        android:label="@string/menu_salary"
        tools:layout="@layout/fragment_salary" >
        <action
            android:id="@+id/action_nav_salary_to_nav_profile"
            app:destination="@id/nav_profile"
            app:popUpToInclusive="true" />
    </fragment>
</navigation>