<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.home.HomeFragment">

    <TextView
        android:id="@+id/tvTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        android:text="@string/home_title"
        android:textColor="?attr/colorOnSecondary"
        android:textStyle="bold"
        android:textAlignment="center"
        android:layout_marginHorizontal="16dp"
        android:layout_marginTop="16dp"
        style="@style/TextAppearance.AppCompat.Headline"/>

    <TextView
        android:id="@+id/tvSubTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/tvTitle"
        android:text="@string/home_subtitle"
        android:textColor="?attr/colorOnSecondary"
        android:textAlignment="center"
        android:layout_marginHorizontal="16dp"
        android:layout_marginTop="4dp"
        style="@style/TextAppearance.AppCompat.Subhead"/>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/clProfile"
        android:layout_width="0dp"
        android:background="@drawable/home_box_ripple"
        android:layout_height="80dp">

        <ImageView
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:src="@drawable/ic_profile"
            app:tint="@color/teal_700"
            android:layout_margin="8dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>

        <TextView
            android:id="@+id/tvProfileTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/menu_profile"
            android:textColor="@color/teal_700"
            android:layout_margin="8dp"
            android:textStyle="bold"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"/>

        <TextView
            android:id="@+id/tvProfileSubtitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/teal_700"
            android:layout_margin="8dp"
            android:text="@string/profile_description"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/clSalary"
        android:layout_width="0dp"
        android:background="@drawable/home_box_ripple"
        android:layout_height="80dp">

        <ImageView
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:src="@drawable/ic_salary"
            android:layout_margin="8dp"
            app:tint="@color/teal_700"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>

        <TextView
            android:id="@+id/tvSalaryTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/menu_salary"
            android:textColor="@color/teal_700"
            android:layout_margin="8dp"
            android:textStyle="bold"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"/>

        <TextView
            android:id="@+id/tvSalarySubtitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:textColor="@color/teal_700"
            android:text="@string/salary_description"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>


    <androidx.constraintlayout.helper.widget.Flow
        android:id="@+id/flOptionsHome"
        app:layout_constraintTop_toBottomOf="@id/tvSubTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:orientation="horizontal"
        app:constraint_referenced_ids="clProfile, clSalary"
        app:flow_horizontalGap="16dp"
        app:flow_maxElementsWrap="2"
        app:flow_verticalGap="16dp"
        app:flow_wrapMode="aligned" />

</androidx.constraintlayout.widget.ConstraintLayout>