<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingHorizontal="24dp"
    tools:context=".ui.profile.ProfileFragment">

    <!-- Employee Number -->
    <TextView
        android:id="@+id/labelEmpNo"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/employee_number"
        android:textSize="20sp"
        android:layout_marginTop="16dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <TextView
        android:id="@+id/tvEmpNo"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="..."
        android:textSize="14sp"
        android:textStyle="bold"
        app:layout_constraintTop_toBottomOf="@id/labelEmpNo"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <!-- Full Name -->
    <TextView
        android:id="@+id/labelFullName"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/full_name"
        android:textSize="20sp"
        android:layout_marginTop="16dp"
        app:layout_constraintTop_toBottomOf="@id/tvEmpNo"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <TextView
        android:id="@+id/tvFullName"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="..."
        android:textSize="14sp"
        android:textStyle="bold"
        app:layout_constraintTop_toBottomOf="@id/labelFullName"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <!-- Birthdate -->
    <TextView
        android:id="@+id/labelBirthDate"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/birthdate"
        android:textSize="20sp"
        android:layout_marginTop="16dp"
        app:layout_constraintTop_toBottomOf="@id/tvFullName"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <TextView
        android:id="@+id/tvBirthDate"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="..."
        android:textSize="14sp"
        android:textStyle="bold"
        app:layout_constraintTop_toBottomOf="@id/labelBirthDate"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <!-- Hiredate -->
    <TextView
        android:id="@+id/labelHireDate"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/hiredate"
        android:textSize="20sp"
        android:layout_marginTop="16dp"
        app:layout_constraintTop_toBottomOf="@id/tvBirthDate"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <TextView
        android:id="@+id/tvHireDate"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="..."
        android:textSize="14sp"
        android:textStyle="bold"
        app:layout_constraintTop_toBottomOf="@id/labelHireDate"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <!-- Titles -->
    <TextView
        android:id="@+id/labelTitles"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/titles_latest_to_oldest"
        android:textSize="20sp"
        android:layout_marginTop="16dp"
        app:layout_constraintTop_toBottomOf="@id/tvHireDate"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <TextView
        android:id="@+id/tvTitles"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="..."
        android:textSize="14sp"
        android:textStyle="bold"
        app:layout_constraintTop_toBottomOf="@id/labelTitles"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <!-- Departments -->
    <TextView
        android:id="@+id/labelDepartments"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/departments_latest_to_oldest"
        android:textSize="20sp"
        android:layout_marginTop="16dp"
        app:layout_constraintTop_toBottomOf="@id/tvTitles"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <TextView
        android:id="@+id/tvDepartments"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:textSize="14sp"
        android:textStyle="bold"
        app:layout_constraintTop_toBottomOf="@id/labelDepartments"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <!-- ProgressBar -->
    <ProgressBar
        android:id="@+id/progressBar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>
